# smartrent-ai

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  demo_chatbot.py  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/ai/: __init__.py
app/ai/llm/: __init__.py  base_llm.py  gemini_client.py  llm_manager.py
app/api/v1/: api.py  chat.py  users.py
app/core/: config.py
app/database/: __init__.py  database.py
app/domain/dtos/: user.py
app/domain/entities/: user.py
app/domain/repositories/: user_repository.py
app/domain/services/: user_service.py
app/dto/: __init__.py  chat.py  user.py
app/entity/: user.py
app/repository/: user_repository.py
app/service/: chatbot_service.py  user_service.py
docs/: chatbot-integration.md  ci-cd-setup.md  llm-integration.md
tests/: test_chatbot.py  test_main.py
